# -

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements-gui.txt
.agents/: build-and-debug.md  conventions.md  test.md  workflow.md
.claude/: settings.json
.claude/hooks/: check_py_file.py
.github/workflows/: build-windows-exe.yml  release-windows.yml  test-gate.yml
configs/: README.md  aifly.json  base.json  change.json  diamond.json  mountain_demo.json  quadrilateral_10_aircraft_a05_leader.json  rally_demo.json  rally_demo_5_aircraft.json  single_avoidance_80km.json
configs/element/: line.json  mountain_demo_mission_route.json  mountain_demo_obstacles.json  mountain_demo_rally_route.json  obstacles.json  rally_demo_mission_route.json  rally_demo_rally_route.json  rally_demo_route.json  single_avoidance_80km_obstacles.json  single_avoidance_80km_route.json  terrain_mountain_demo.json  航线1 钻石默认航线 2026年7月6日10时8分18秒.XML
design/: 长机-僚机模式下长机位置对僚机影响分析.md
docs/: 0-坐标系约定.md  0-架构HLD.md  1-仿真控制HLD.md  10-Windows编译入口说明.md  11-自动化ST设计与用例清单.md  2-1-三自由度模型LLD.md  2-模型迭代HLD.md  3-协调算法HLD.md  3-编队算法HLD.md  4-节点算法HLD.md  5-1-通信功能LLD.md  5-2-通信功能LLT.md  5-通信功能HLD.md  6-加扰HLD.md  7-1-控制结果绘图LLD.md  7-UIHLD.md  8-CLIHLD.md  9-数据分析功能规划.md  9-数据分析设计文档.md  codex指标.md  demo.html  review-UI接入仿真控制检视.md  review-仿真控制实现检视.md  review-对齐桩仿真与加载配置检视.md  three-aircraft-3d-demo.html  逻辑视图.drawio  避障-A星-开发计划.md  避障-A星-设计文档.md  高层分割.drawio  鲁棒图.drawio
docs/3-编队算法设计文档/: 0-HLD.md  1-Context和叶类型.md  1-LLD综述.md  2-4模板说明.md  2-实体组LLD.md  2-算法组.md  3-流程组.md  3-算法库LLD.md  4-对象组.md  4-流程库LLD.md  5-用例-领航跟随保持.md  6-用例-领航跟随集结LLD.md  6-用例-领航跟随集结LLT.md  7-用例-队形切换.md  8-集结待命盘旋方案.md  僚机调用时序.drawio  实体间调用时序.drawio  系统架构图.drawio  长机调用时序.drawio  集中式通信+长机僚机+PID控制+三角队形+1个航段.xlsx
docs/横侧向点号切入问题/: 横侧向点号切入问题.md
docs/避障算法设计文档/: 01-避障总览.html  02-障碍物建模与判障.html  03-栅格化与坐标转换.html  04-A星搜索核心.html  05-工程安全规则.html  06-转向惩罚.html  07-去冗余与航线转换.html  08-圆弧与可飞性.html  avoidance-study.css  避障-A星-几何约束.drawio  避障-A星-数据流.drawio  避障-A星-设计文档.md  避障-UI交互示意.drawio  避障学习目录.html
result/: README.md  analyze_accuracy.bat  run_batch.bat
scripts/: analyze_formation_accuracy.py  build_macos_full_release.sh  build_macos_lite_release.sh  build_windows_exe.ps1  build_windows_exe_dev.ps1  build_windows_exe_release.ps1  build_windows_full_dev.ps1  build_windows_full_release.ps1  build_windows_lite_dev.ps1  build_windows_lite_release.ps1  capture_situation3d.py  check_demo_html.js  check_gui_offscreen.py  final_check.py  generate_terrain_detail_normal.py  generate_terrain_obstacles.py  run_macos_full_dev.sh  run_macos_lite_dev.sh  run_st.py  run_windows_full_dev.ps1  run_windows_lite_dev.ps1
scripts/pyinstaller_hooks/: set_full_feature_profile.py  set_lite_feature_profile.py
scripts/terrain_style_preview/: README.md  generate_layout_candidates.py  generate_previews.py  layout_scene.qml  preview_scene.qml  terrain_layout_final.json
src/: __init__.py  main.py
src/algorithm/: __init__.py  base.py
src/common/: __init__.py  clock.py  coordinates.py  envelope.py  state_machine.py
src/data/: __init__.py  config_loader.py  control_effect_analysis.py  formation_accuracy_analysis.py  geo.py  geo_config.py  logger.py
src/environment/: __init__.py  comm.py  disturb.py  model.py
src/runner/: __init__.py  gui_application.py  sim_control.py  sim_control_constants.py  sim_control_loop.py  sim_control_modules.py  sim_control_routes.py  sim_control_snapshot.py  sim_control_types.py  sim_controller.py
src/ui/: __init__.py
tests/: test_node_card_view_model.py
tests/llt/: __init__.py  _geo_route.py  conftest.py  test_aircraft_model_style.py  test_avoidance_apply_route.py  test_avoidance_astar.py  test_avoidance_config.py  test_avoidance_feasibility.py  test_avoidance_panel_view_model.py  test_avoidance_path_to_route.py  test_avoidance_planner.py  test_avoidance_ui.py  test_chart_common.py  test_cli_entrypoint.py  test_color_space.py  test_comm.py  test_config_state_view_model.py  test_control_effect_analysis.py  test_coordinates.py  test_data_analysis_window.py  test_dialogs.py  test_disturbance_view_model.py  test_environment_model.py  test_formation_accuracy_analysis.py  test_formation_algorithm.py  test_formation_rally.py  test_generate_terrain_obstacles.py  test_geo_config.py  test_gui_application_diagnostics.py  test_gui_entrypoint.py  test_gui_layer_boundaries.py  test_gui_view_interactions.py  test_linefile.py  test_live_monitor.py  test_node_card_view_model.py  test_obstacle_kind.py  test_obstaclefile.py  test_offline_plot.py  test_playback_view_model.py  test_pos_calc_manager.py  (+20 more)
(+206 files in other folders)
